<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.VkCup.News">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_nav_back_black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="textError,buttonRetry" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="lockableScrollView,bottomShadow,buttonSkip,buttonLike,textSkip,textLike" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="progress,progressText" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/searching_for_recommendations"
        android:textColor="?attr/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_requesting_news_feed"
        android:textColor="@color/error_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRetry"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/retry"
        android:textColor="@color/error_text_color"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textError"
        app:strokeColor="@color/error_text_color"
        app:strokeWidth="1dp" />

    <by.anegin.vkcup21.features.news.ui.feed.view.LockableScrollView
        android:id="@+id/lockableScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <by.anegin.vkcup21.features.news.ui.feed.view.SwipeableFeedLayout
            android:id="@+id/swipeableFeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:item_layout="@layout/item_post" />

    </by.anegin.vkcup21.features.news.ui.feed.view.LockableScrollView>

    <View
        android:id="@+id/bottomShadow"
        android:layout_width="0dp"
        android:layout_height="@dimen/feed_bottom_shadow_height"
        android:background="@drawable/bottom_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_ignore_post"
        app:backgroundTint="@color/feed_fab_color"
        app:fabCustomSize="@dimen/feed_fab_size"
        app:layout_constraintEnd_toStartOf="@id/buttonLike"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockableScrollView"
        app:maxImageSize="@dimen/feed_fab_image_size"
        app:rippleColor="#ccc"
        app:tint="#3F8AE0"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignore_post"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/buttonSkip"
        app:layout_constraintStart_toStartOf="@id/buttonSkip"
        app:layout_constraintTop_toBottomOf="@id/buttonSkip" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_like_post"
        app:backgroundTint="@color/feed_fab_color"
        app:fabCustomSize="@dimen/feed_fab_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSkip"
        app:layout_constraintTop_toBottomOf="@id/lockableScrollView"
        app:maxImageSize="@dimen/feed_fab_image_size"
        app:rippleColor="#ff3347"
        app:tint="#FF3347"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/textLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_post"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/buttonLike"
        app:layout_constraintStart_toStartOf="@id/buttonLike"
        app:layout_constraintTop_toBottomOf="@id/buttonLike" />

</androidx.constraintlayout.widget.ConstraintLayout>